@@ -3723,9 +3723,10 @@ However, if `message-yank-prefix' is non-nil, insert that prefix on each line."
       (message-delete-line))
     ;; Delete blank lines at the end of the buffer.
     (goto-char (point-max))
-    (beginning-of-line)
-    (while (and (looking-at "$")
-		(zerop (forward-line -1)))
+    (unless (eolp)
+      (insert "\n"))
+    (while (and (zerop (forward-line -1))
+		(looking-at "$"))
       (message-delete-line)))
   ;; Do the indentation.
   (if (null message-yank-prefix)
