@@ -1,3 +1,8 @@
+2011-09-21  Lars Magne Ingebrigtsen  <larsi@gnus.org>
+
+	* message.el (message-indent-citation): Revert last change which made
+	`F' not work.
+
 2011-09-13  Kan-Ru Chen  <kanru@kanru.info>
 
 	* ecomplete.el (ecomplete-display-matches): Intercept key sequence from
